Playlist index page color contrast and form element a11y issues (#6378)
* Playlist index page color contrast and form element a11y issues

* Explicit association using for & id for filter

--- a/app/assets/stylesheets/datatables.scss
+++ b/app/assets/stylesheets/datatables.scss
@@ -105,4 +105,9 @@ table.dataTable thead .sorting_desc_disabled:after {
 
 .dataTableToolsBottom .pagination .active a {
   cursor: default;
+  color: #6e6e6e;
+}
+
+.dataTableToolsBottom .pagination .page-item.disabled .page-link {
+  color: #767676 !important;
 }
